assert(profile.count() == 0) failed: sanity in InlineTree::is_not_reached

XMLWordPrintable

    • b25

        Test failed with
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (open/src/hotspot/share/opto/bytecodeInfo.cpp:340), pid=20723, tid=18760
        # assert(profile.count() == 0) failed: sanity
        #
        # JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-2019-05-16-0024331.lmesnik.null)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-2019-05-16-0024331.lmesnik.null, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x6cabf4] InlineTree::is_not_reached(ciMethod*, ciMethod*, int, ciCallProfile&) [clone .constprop.153]+0xa4
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e %P %I %h" (or dumping to /scratch/lmesnik/ws/ks-apps/build/linux-x64/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink14D_java/scratch/0/core.20723)
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:MaxRAMPercentage=12 -XX:+DeoptimizeALot -XX:MaxRAMPercentage=50 -XX:+HeapDumpOnOutOfMemoryError -XX:+CrashOnOutOfMemoryError -Djava.net.preferIPv6Addresses=false -XX:+DisplayVMOutputToStderr -XX:+UsePerfData -Xlog:gc*,gc+heap=debug:gc.log:uptime,timemillis,level,tags -XX:+DisableExplicitGC -XX:+StartAttachListener -XX:NativeMemoryTracking=detail -XX:+FlightRecorder --add-exports=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED -Djava.io.tmpdir=/scratch/lmesnik/ws/ks-apps/build/linux-x64/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink14D_java/scratch/0/java.io.tmpdir -Duser.home=/scratch/lmesnik/ws/ks-apps/build/linux-x64/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink14D_java/scratch/0/user.home -agentpath:/scratch/lmesnik/ws/ks-apps/build/linux-x64/images/test/hotspot/jtreg/native/libJvmtiStressModule.so applications.kitchensink.process.stress.Main /scratch/lmesnik/ws/ks-apps/build/linux-x64/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink14D_java/scratch/0/kitchensink.final.properties

        Host: Intel(R) Xeon(R) CPU E5-2690 0 @ 2.90GHz, 4 cores, 14G, Oracle Linux Server release 7.5
        Time: Fri May 17 00:04:16 2019 PDT elapsed time: 108196 seconds (1d 6h 3m 16s)

        --------------- T H R E A D ---------------

        Current thread (0x00002af25c8c2000): JavaThread "C2 CompilerThread1" daemon [_thread_in_vm, id=18760, stack(0x00002af250101000,0x00002af250202000)]


        Current CompileTask:
        C2:
        [error occurred during error reporting (printing current compile task), id 0xe0000000, Internal Error (open/src/hotspot/share/runtime/timer.cpp:112)]

        Stack: [0x00002af250101000,0x00002af250202000], sp=0x00002af2501fe660, free space=1013k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x6cabf4] InlineTree::is_not_reached(ciMethod*, ciMethod*, int, ciCallProfile&) [clone .constprop.153]+0xa4
        V [libjvm.so+0x6cff50] InlineTree::ok_to_inline(ciMethod*, JVMState*, ciCallProfile&, WarmCallInfo*, bool&)+0x1950
        V [libjvm.so+0xb6c395] Compile::call_generator(ciMethod*, int, bool, JVMState*, bool, float, ciKlass*, bool, bool)+0x905
        V [libjvm.so+0xb6d9d9] Parse::do_call()+0x469
        V [libjvm.so+0x14345a0] Parse::do_one_bytecode()+0xff0
        V [libjvm.so+0x1424f50] Parse::do_one_block()+0x650
        V [libjvm.so+0x1425453] Parse::do_all_blocks()+0x113
        V [libjvm.so+0x1427314] Parse::Parse(JVMState*, ciMethod*, float)+0xc54
        V [libjvm.so+0x80295c] ParseGenerator::generate(JVMState*)+0x18c
        V [libjvm.so+0x9bee84] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xe74
        V [libjvm.so+0x8009ed] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x10d
        V [libjvm.so+0x9cb74d] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x46d
        V [libjvm.so+0x9cc7a8] CompileBroker::compiler_thread_loop()+0x418
        V [libjvm.so+0x16b396a] JavaThread::thread_main_inner()+0x26a
        V [libjvm.so+0x16bc027] JavaThread::run()+0x227
        V [libjvm.so+0x16b90b6] Thread::call_run()+0xf6
        V [libjvm.so+0x13d378e] thread_native_entry(Thread*)+0x10e

              Assignee:
              Jie Fu
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: