8224162: assert(profile.count() == 0) failed: sanity in InlineTree::is_not_reached

Reviewed-by: vlivanov, kvn